test-2/objects/Invoice__c.object
<CustomObject>
    <description>Sales invoices linked to customers within Salesforce</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>invoices</relationshipLabel>
        <relationshipName>invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <inlineHelpText>The date in which the invoice was created in our invoice system.</inlineHelpText>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Any notes you wish to enter about this invoice</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>The current status of the invoice</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
                <value>
                    <fullName>Overdue</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Sub Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Contacted once</fullName>
                </value>
                <value>
                    <fullName>Contacted Twice</fullName>
                </value>
                <value>
                    <fullName>Pending going to Legal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>film__c</fullName>
        <label>film</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>street__c</fullName>
        <label>street</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>